--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-.lot
-.out
-.out.ps
-.run
-.synctex.gz
-.toc
-.dvi
-.lof
-chrysalis-report-blx.bib
+*.lot
+*.out
+*.out.ps
+*.run
+*.synctex.gz
+*.toc
+*.dvi
+*.lof
+*chrysalis-report-blx.bib
