--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.lot
-.out
-.out.ps
-.run
-.synctex.gz
-.toc
-.dvi
-.lof
-chrysalis-report-blx.bib
+*.lot
+*.out
+*.out.ps
+*.run.xml
+*.log
+*.synctex.gz
+*.toc
+*.dvi
+*.lof
+*.aux
+*chrysalis-report-blx.bib
